--- a/composer.json
+++ b/composer.json
@@ -11,8 +11,10 @@
         "php": "^7.2.5",
         "doctrine/dbal": "^2.0",
         "fideloper/proxy": "^4.2",
+        "firebase/php-jwt": "^5.4",
         "fruitcake/laravel-cors": "^1.0",
         "guzzlehttp/guzzle": "^6.3",
+        "jenssegers/mongodb": "dev-develop",
         "laravel/framework": "^7.0",
         "laravel/tinker": "^2.0"
     },
