--- a/composer.json
+++ b/composer.json
@@ -16,7 +16,8 @@
         "guzzlehttp/guzzle": "^6.3",
         "jenssegers/mongodb": "dev-develop",
         "laravel/framework": "^7.0",
-        "laravel/tinker": "^2.0"
+        "laravel/tinker": "^2.0",
+        "rap2hpoutre/laravel-log-viewer": "^1.7"
     },
     "require-dev": {
         "facade/ignition": "^2.0",
